# MinSurFEM

./: .gitmodules  CMakeLists.txt  README.md
include/FastFEM/: MinSurFF.hpp  MinSurFastFem.hpp
include/dealII/: MinSur.hpp  MinSurDealII.hpp
mesh/: square.msh
src/dealII/: CMakeLists.txt  MinSur.cpp  MinSur.hpp  MinSurDealII.cpp
src/fastFEM/: CMakeLists.txt  MinSurFF.cpp  MinSurFastFem.cpp
src/main/: CMakeLists.txt  main.cpp
